# Agentic-web-scraper

./: .gitignore  Dockerfile  MCP_VALIDATION_REPORT.md  README.md  agent.py  fastagent.config.yaml  mcp_server.py  pyproject.toml  requirements.txt  site_crawl_result.md  test_mcp_integration.py  test_token_logging.py
adapters/llm/: fastagent_adapter.py  ollama_adapter.py
adapters/logging/: __init__.py  token_logger.py
adapters/research/: __init__.py  citation_adapter.py  evidence_analysis_adapter.py
adapters/storage/: json_storage.py
adapters/web/: fetch_adapter.py  playwright_adapter.py
config/: settings.py
core/application/: __init__.py
core/domain/: models.py  ports.py
docs/: advanced.md  installation.md  quick_start.md  troubleshooting.md  usage.md
storage/: test_export.json
storage/test/: validation_export.json
storage/test/content/: content_b76b4949.json
tests/: test_mcp_sse.py  test_mcp_stdio.py
