[project]
name = "agentic-web-scraper"
version = "1.0.0"
description = "MCP Server for intelligent web content extraction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.8.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "typer>=0.9.0",
    "rich>=13.7.0"
]

[project.scripts]
agentic-web-scraper = "mcp_server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
